@@ -1,3 +1,13 @@
+2018-04-09  Mark Lam  <mark.lam@apple.com>
+
+        Decorate method table entries to support pointer profiling.
+        https://bugs.webkit.org/show_bug.cgi?id=184430
+        <rdar://problem/39296190>
+
+        Reviewed by Saam Barati.
+
+        * wtf/PointerPreparations.h:
+
 2018-04-08  Yusuke Suzuki  <utatane.tea@gmail.com>
 
         Unreviewed, use alignas(void*)
